<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#F57C00"
    tools:context="com.example.anuj.quizapp.MainActivity">

    <Button
        android:id="@+id/playGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_game_button"
        android:textAlignment="center"
        android:textStyle="bold"
        android:typeface="sans"
        android:textColor="#B71C1C"
        android:onClick="playGame"
        android:clickable="true"
        android:layout_gravity="center_horizontal|center_vertical" />

    <Button
        android:id="@+id/highScoreButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/high_score_button"
        android:textAlignment="center"
        android:textStyle="bold"
        android:typeface="sans"
        android:textColor="#B71C1C"
        android:clickable="true"
        android:onClick="showHighScores" />

    <Button
        android:id="@+id/instructionsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showInstruction"
        android:text="@string/instructions_button"
        android:textAlignment="center"
        android:textStyle="bold"
        android:typeface="sans"
        android:textColor="#212121"
        android:layout_alignBottom="@id/highScoreButton"
        android:layout_gravity="center_horizontal"
        android:clickable="true" />


</LinearLayout>
