<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.anuj.quizapp.QuizActivity"
    android:orientation="vertical"
    android:background="#0000FF">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/highScore"
            android:text=" HIGH SCORE "
            android:textSize="30sp"
            android:layout_alignParentLeft="true"
            android:background="#FF5722"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" SCORE 0 "
            android:textSize="30sp"
            android:id="@+id/score"
            android:layout_alignParentRight="true"
            android:textColor="#795548"
            android:background="#FFFFFF"
            android:textStyle="bold"

            />
    </RelativeLayout>

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center"
        android:text="@id/questionTextView"
        android:textAlignment="center"
        android:background="#FFEB3B"
        android:typeface="normal"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="#000000" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="20dp">


        <Button
            android:id="@+id/yesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/view"
            android:clickable="true"
            android:text="@string/yes_button"
            android:background="#006400"
            android:textStyle="bold"
            android:textAlignment="center"
            android:typeface="normal"
            android:textSize="18sp"
            android:fontFamily="sans-serif" />

        <View
            android:id="@+id/view"
            android:layout_height="1dp"
            android:layout_width="0dp"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/noButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:layout_toRightOf="@id/view"
            android:clickable="true"
            android:text="@string/no_button"
            android:background="#FF0000"
            android:textStyle="bold"
            android:textAlignment="center"
            android:typeface="normal"
            android:textSize="18sp"


            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/next_button"
            android:background="#FF6D00"
            android:textStyle="bold"
            android:textAlignment="center"
            android:typeface="normal"
            android:textSize="20sp"
            android:textColor="#000000"

            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        >

        <Button
            android:id="@+id/saveQuestionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textStyle="bold"
            android:textAlignment="center"
            android:typeface="normal"
            android:textSize="20sp"
            android:onClick="saveQuestion" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_screenshot"
            android:textStyle="bold"
            android:textAlignment="center"
            android:typeface="normal"
            android:textSize="20sp"
            android:onClick="saveScreenshot"

            android:layout_toRightOf="@id/saveQuestionButton" />
    </RelativeLayout>


</LinearLayout>
